English to Bengali translation notebook

--- a/eng_to_ban.ipynb
+++ b/eng_to_ban.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# English-to-Bengali Transformer Translation Project"
+        "# English-to-Bengali Transformer Translation"
       ],
       "metadata": {
         "id": "uTrxcTjtN5Uv"
@@ -240,7 +240,7 @@
         "    target_vocab_size=vocab_size,\n",
         "    max_seq_length=sequence_length,\n",
         "    source_language='english',\n",
-        "    target_language='japan')\n",
+        "    target_language='bengla')\n",
         "\n",
         "model.compile(optimizer=\"rmsprop\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])\n",
         "\n",
